<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context="com.adrianmanole.inventoryapp.EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_required_fields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_required_fields" />

        <TextView
            android:id="@+id/text_error_invalid_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/editor_invalid_entry" />

        <LinearLayout style="@style/EditorLayout">

            <TextView
                android:id="@+id/text_label_product"
                style="@style/EditorLabel"
                android:text="@string/label_product_name" />

            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorInput"
                android:inputType="textCapWords" />
        </LinearLayout>

        <LinearLayout style="@style/EditorLayout">

            <TextView
                android:id="@+id/text_label_price"
                style="@style/EditorLabel"
                android:text="@string/label_price" />

            <TextView style="@style/EditorLabelCurrency" />

            <EditText
                android:id="@+id/edit_product_price"
                style="@style/EditorInput"
                android:layout_width="0dp"
                android:layout_weight="1.8"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout style="@style/EditorLayout">

            <TextView
                android:id="@+id/text_label_stock_quantity"
                style="@style/EditorLabel"
                android:text="@string/label_quantity" />

            <EditText
                android:id="@+id/edit_product_stock"
                style="@style/EditorInput"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout style="@style/EditorLayout">

            <TextView
                android:id="@+id/text_label_supplier"
                style="@style/EditorLabel"
                android:text="@string/label_supplier" />

            <EditText
                android:id="@+id/edit_supplier_name"
                style="@style/EditorInput"
                android:inputType="textCapWords" />
        </LinearLayout>

        <LinearLayout style="@style/EditorLayout">

            <TextView
                android:id="@+id/text_label_email"
                style="@style/EditorLabel"
                android:text="@string/label_email" />

            <EditText
                android:id="@+id/edit_supplier_email"
                style="@style/EditorInput"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout style="@style/EditorLayout">

            <TextView
                android:id="@+id/text_label_phone"
                style="@style/EditorLabel"
                android:text="@string/label_phone" />

            <EditText
                android:id="@+id/edit_supplier_phone"
                style="@style/EditorInput"
                android:inputType="phone" />
        </LinearLayout>

        <Button
            android:id="@+id/button_add_image"
            style="@style/EditorButton"
            android:text="@string/label_image" />

        <ImageView
            android:id="@+id/image_product"
            style="@style/EditorImageHolder"
            android:contentDescription="@string/default_editor_image" />

    </LinearLayout>

</ScrollView>