<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context="com.adrianmanole.inventoryapp.EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:orientation="vertical">

        <LinearLayout style="@style/EditorLayout">

            <TextView
                android:id="@+id/text_label_product"
                style="@style/EditorLabel"
                android:text="@string/label_product_name_1" />

            <TextView
                android:id="@+id/text_product_name"
                style="@style/DetailInput"
                tools:text="@string/default_product_name" />
        </LinearLayout>

        <LinearLayout
            style="@style/EditorLayout"
            android:weightSum="3">

            <TextView
                android:id="@+id/text_label_price"
                style="@style/EditorLabel"
                android:text="@string/label_price_1" />

            <TextView style="@style/EditorLabelCurrency" />

            <TextView
                android:id="@+id/text_product_price"
                style="@style/DetailInput"
                android:layout_width="0dp"
                android:layout_weight="1.8"
                tools:text="@string/default_price" />
        </LinearLayout>

        <LinearLayout style="@style/EditorLayout">

            <TextView
                android:id="@+id/text_label_supplier"
                style="@style/EditorLabel"
                android:text="@string/label_supplier_1" />

            <TextView
                android:id="@+id/text_supplier_name"
                style="@style/DetailInput"
                tools:text="@string/label_supplier_1" />
        </LinearLayout>

        <LinearLayout
            style="@style/EditorLayout"
            android:weightSum="3">

            <TextView
                android:id="@+id/text_label_email"
                style="@style/EditorLabel"
                android:text="@string/label_email_1" />

            <TextView
                android:id="@+id/text_supplier_email"
                style="@style/DetailInput"
                android:layout_width="0dp"
                android:layout_weight="1.7"
                tools:text="@string/default_email" />

            <ImageButton
                android:id="@+id/button_email"
                style="@style/DetailActionButton"
                android:src="@drawable/email" />

        </LinearLayout>

        <LinearLayout
            style="@style/EditorLayout"
            android:weightSum="3">

            <TextView
                android:id="@+id/text_label_phone"
                style="@style/EditorLabel"
                android:text="@string/label_phone" />

            <TextView
                android:id="@+id/text_supplier_phone"
                style="@style/DetailInput"
                android:layout_width="0dp"
                android:layout_weight="1.7"
                tools:text="@string/default_phone" />

            <ImageButton
                android:id="@+id/button_phone"
                style="@style/DetailActionButton"
                android:src="@drawable/phone" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_label_stock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:gravity="center_horizontal"
            android:text="@string/label_stock_1"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/button_decrease"
                style="@style/DetailStockButton"
                android:src="@drawable/minus_box" />

            <TextView
                android:id="@+id/text_stock"
                style="@style/DetailStock"
                android:layout_toRightOf="@id/button_decrease"
                tools:text="@string/default_stock" />

            <ImageButton
                android:id="@+id/button_increase"
                style="@style/DetailStockButton"
                android:layout_toRightOf="@id/text_stock"
                android:src="@drawable/plus_box" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/image_product"
            style="@style/EditorImageHolder"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:contentDescription="@string/default_editor_image" />

    </LinearLayout>

</ScrollView>