<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/list_item_height"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_margin">

        <TextView
            android:id="@+id/text_product_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:maxLines="2"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            tools:text="@string/default_product_name" />

        <TextView
            android:id="@+id/text_product_price"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:textColor="@color/colorTextSecondary"
            android:textSize="@dimen/text_size_medium"
            tools:text="@string/default_price" />

        <TextView
            android:id="@+id/text_product_stock"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:textColor="@color/colorTextSecondary"
            android:textSize="@dimen/text_size_medium"
            tools:text="@string/default_stock" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/button_sale"
        android:layout_width="@dimen/list_item_height"
        android:layout_height="@dimen/list_item_height"
        android:backgroundTint="@color/colorPrimaryLight"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:src="@drawable/shopping_basket" />

</LinearLayout>